crates/puffin_parser/src/tests/snapshots/puffin_parser__tests__parser__just_number.snap
---
source: crates/puffin_parser/src/tests/parser.rs
expression: "standard_test(\"1\")"
---
SOURCE_FILE@0..=0
    EXPR_STMT@0..=0
        PAT_EXPR@0..=0
            LIT_PAT@0..=0
                1 |INT@0..0

