crates/puffin_parser/src/tests/snapshots/puffin_parser__tests__parser__let_stmt_concrete_type.snap
---
source: crates/puffin_parser/src/tests/parser.rs
expression: "standard_test(\"let a: float = 2.0\")"
---
SOURCE_FILE@0..=17
    LET_STMT@0..=17
        let |KW_LET@0..2
          |WHITESPACE@3..3
        TYPE_BIND@4..=11
            IDENT_PAT@4..=4
                a |IDENT@4..4
            : |COLON@5..5
              |WHITESPACE@6..6
            CONCRETE_TYPE@7..=11
                float |KW_FLOAT@7..11
          |WHITESPACE@12..12
        = |EQ@13..13
          |WHITESPACE@14..14
        PAT_EXPR@15..=17
            LIT_PAT@15..=17
                2.0 |FLOAT@15..17

