crates/puffin_parser/src/tests/snapshots/puffin_parser__tests__parser__multiple_prefix_operation.snap
---
source: crates/puffin_parser/src/tests/parser.rs
expression: "standard_test(\"--1 + -2\")"
---
SOURCE_FILE@0..=7
    EXPR_STMT@0..=7
        BIN_EXPR@0..=7
            PREFIX_EXPR@0..=3
                - |MINUS@0..0
                PREFIX_EXPR@1..=3
                    - |MINUS@1..1
                    PAT_EXPR@2..=2
                        LIT_PAT@2..=2
                            1 |INT@2..2
                      |WHITESPACE@3..3
            + |PLUS@4..4
              |WHITESPACE@5..5
            PREFIX_EXPR@6..=7
                - |MINUS@6..6
                PAT_EXPR@7..=7
                    LIT_PAT@7..=7
                        2 |INT@7..7

